k8s/cashflow-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cashflow-api
spec:
  type: NodePort
  selector:
    app: cashflow-api
  ports:
    - port: 80
      targetPort: 80
